--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   flutter_dotenv: ^5.2.1
   shared_preferences: ^2.3.5
   http: ^1.2.2
+  webview_flutter: ^4.10.0
+  url_launcher: ^6.3.1
+  flutter_radar_chart: ^0.2.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -65,6 +68,8 @@ flutter:
   assets:
     - assets/images/logodes.svg
     - assets/images/namedes.svg
+    - assets/images/cardbase.svg
+    - assets/images/cardcontour.svg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
