--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,13 @@ dependencies:
   webview_flutter: ^4.10.0
   url_launcher: ^6.3.1
   flutter_radar_chart: ^0.2.1
+  flutter_launcher_icons: ^0.14.3
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/des.png"
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -70,6 +77,7 @@ flutter:
     - assets/images/namedes.svg
     - assets/images/cardbase.svg
     - assets/images/cardcontour.svg
+    - assets/images/des.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
