--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   url_launcher: ^6.3.1
   flutter_radar_chart: ^0.2.1
   flutter_launcher_icons: ^0.14.3
+  camera: ^0.11.1
 
 flutter_launcher_icons:
   android: "launcher_icon"
