--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   flutter_radar_chart: ^0.2.1
   flutter_launcher_icons: ^0.14.3
   camera: ^0.11.1
+  image_picker: ^1.1.2
+  path_provider: ^2.1.5
 
 flutter_launcher_icons:
   android: "launcher_icon"
