--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,14 +43,14 @@ dependencies:
   url_launcher: ^6.3.1
   flutter_radar_chart: ^0.2.1
   flutter_launcher_icons: ^0.14.3
-  camera: ^0.11.1
   image_picker: ^1.1.2
   path_provider: ^2.1.5
 
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/images/des.png"
+  image_path: "assets/images/logododes.png"
+
 
 dev_dependencies:
   flutter_test:
@@ -81,6 +81,7 @@ flutter:
     - assets/images/cardbase.svg
     - assets/images/cardcontour.svg
     - assets/images/des.png
+    - assets/images/logododes.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
