--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,7 @@ flutter:
     - assets/images/logodes.svg
     - assets/images/namedes.svg
     - assets/images/cardbase.svg
+    - assets/images/flamengo.png
     - assets/images/cardcontour.svg
     - assets/images/des.png
     - assets/images/logododes.png
