--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,12 +77,10 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/logodes.svg
+    - assets/images/logodes.png
     - assets/images/namedes.svg
-    - assets/images/cardbase.svg
-    - assets/images/flamengo.png
-    - assets/images/cardcontour.svg
     - assets/images/des.png
-    - assets/icons/logodess.png
+    - assets/images/homelogo.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
